--- a/packages/array/package.json
+++ b/packages/array/package.json
@@ -14,8 +14,7 @@
   "main": "lib/array.js",
   "typings": "lib/array.d.ts",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
     "lib"
