--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proem/all",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Meta package that includes all proem packages",
   "keywords": [
     "proem",
@@ -36,6 +36,6 @@
     "url": "https://github.com/wunderdogsw/proem/issues"
   },
   "dependencies": {
-    "@proem/array": "0.0.0"
+    "@proem/array": "^0.0.1"
   }
 }
