--- a/packages/array/package.json
+++ b/packages/array/package.json
@@ -25,5 +25,9 @@
   "scripts": {
     "prepublishOnly": "tsc -b .",
     "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "gitHead": "4ac04bf0e19ebe487b9c40c3af8316a8bafeb719",
+  "devDependencies": {
+    "typescript": "^3.1.4"
   }
 }
