--- a/packages/array/package.json
+++ b/packages/array/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proem/array",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Typescript array utilities",
   "keywords": [
     "ts",
@@ -26,8 +26,11 @@
     "prepublishOnly": "tsc -b .",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
-  "gitHead": "777c7f1c1b71d1dd235011957f5873ec4449f6cd",
+  "gitHead": "8fc3bbafef3198e6a8d0a9c4f71c20d0f69df567",
   "devDependencies": {
+    "typescript": "^3.1.4"
+  },
+  "dependencies": {
     "typescript": "^3.1.4"
   }
 }
