--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "build": "tsc -b packages",
+    "build:esm": "tsc -b packages/tsconfig.esm.json",
+    "build:commonjs": "tsc -b packages",
+    "build": "npm run build:esm && npm run build:commonjs",
     "test:watch": "jest --watch"
   },
   "devDependencies": {
