--- a/packages/array/package.json
+++ b/packages/array/package.json
@@ -21,7 +21,8 @@
     "access": "public"
   },
   "files": [
-    "lib"
+    "lib",
+    "esm"
   ],
   "scripts": {
     "build:commonjs": "tsc -b .",
