Fix package dependencies

--- a/packages/pipe/package.json
+++ b/packages/pipe/package.json
@@ -42,7 +42,8 @@
     "url": "https://github.com/wunderdogsw/proem/issues"
   },
   "devDependencies": {
-    "@proem/array": "^0.0.8"
+    "@proem/array": "^0.0.8",
+    "typescript": "^3.1.4"
   },
-  "gitHead": "4426a681f6211de7312511891457d467c528cac5"
+  "gitHead": "3173f2d8c5a6d576de73375e1477770690b1d168"
 }
