--- a/packages/some/package.json
+++ b/packages/some/package.json
@@ -39,8 +39,8 @@
   "bugs": {
     "url": "https://github.com/wunderdogsw/proem/issues"
   },
-  "gitHead": "4426a681f6211de7312511891457d467c528cac5",
-  "dependencies": {
+  "gitHead": "3173f2d8c5a6d576de73375e1477770690b1d168",
+  "devDependencies": {
     "typescript": "^3.1.4"
   }
 }
