Add function package

--- a/packages/tsconfig.esm.json
+++ b/packages/tsconfig.esm.json
@@ -3,6 +3,7 @@
   "references": [
     { "path": "array/tsconfig.esm.json" },
     { "path": "some/tsconfig.esm.json" },
-    { "path": "pipe/tsconfig.esm.json" }
+    { "path": "pipe/tsconfig.esm.json" },
+    { "path": "function/tsconfig.esm.json" }
   ]
 }
