Fix function package build order

--- a/packages/tsconfig.esm.json
+++ b/packages/tsconfig.esm.json
@@ -1,9 +1,9 @@
 {
   "files": [],
   "references": [
+    { "path": "function/tsconfig.esm.json" },
     { "path": "array/tsconfig.esm.json" },
     { "path": "some/tsconfig.esm.json" },
-    { "path": "pipe/tsconfig.esm.json" },
-    { "path": "function/tsconfig.esm.json" }
+    { "path": "pipe/tsconfig.esm.json" }
   ]
 }
