Use function package aliases in array

--- a/packages/array/package.json
+++ b/packages/array/package.json
@@ -32,6 +32,7 @@
   },
   "gitHead": "1724f654330c1c1a8631069d2884bc250d795233",
   "devDependencies": {
+    "@proem/function": "^0.0.12",
     "typescript": "^3.1.4"
   }
 }
