--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "build:esm": "tsc -b packages/tsconfig.esm.json",
     "build:commonjs": "tsc -b packages",
     "build": "npm run build:esm && npm run build:commonjs",
+    "build:watch": "tsc -b packages -w",
     "publish": "npm run build && lerna publish",
-    "test:watch": "jest --watch",
-    "build:watch": "tsc -b packages -w"
+    "test": "jest",
+    "test:watch": "npm test --watch"
   },
   "devDependencies": {
     "@types/jest": "^23.3.8",
