--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,6 +1,10 @@
 {
   "files": [],
   "references": [
-    { "path": "packages/**//tsconfig.esm.json" }
+    { "path": "packages/array/tsconfig.esm.json" },
+    { "path": "packages/dict/tsconfig.esm.json" },
+    { "path": "packages/function/tsconfig.esm.json" },
+    { "path": "packages/pipe/tsconfig.esm.json" },
+    { "path": "packages/some/tsconfig.esm.json" }
   ]
 }
