--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
+  "extends": "./tsconfig.settings.json",
   "files": [],
   "references": [
-    { "path": "packages/*" },
-    { "path": "array" },
-    { "path": "dict" },
-    { "path": "function" },
-    { "path": "pipe" },
-    { "path": "some" }
+    { "path": "packages/array" },
+    { "path": "packages/dict" },
+    { "path": "packages/function" },
+    { "path": "packages/pipe" },
+    { "path": "packages/some" }
   ]
 }
