--- a/packages/tsconfig.settings.json
+++ b/packages/tsconfig.settings.json
@@ -8,7 +8,11 @@
     "strict": true,
     "composite": true,
     "esModuleInterop": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "downlevelIteration": true,
+    "lib": [
+      "es2017"
+    ]
   },
   "exclude": ["**/*.test.ts", "**/esm/*", "**/lib/*"]
 }
