Fix initial build

--- a/packages/array/package.json
+++ b/packages/array/package.json
@@ -11,9 +11,9 @@
   "author": "Joni Katajamäki <joni.katajamaki@gmail.com>",
   "homepage": "https://github.com/wunderdogsw/proem",
   "license": "MIT",
-  "main": "lib/array.js",
-  "module": "esm/array.js",
-  "types": "lib/array.d.ts",
+  "main": "lib/index.js",
+  "module": "esm/index.js",
+  "types": "lib/index.d.ts",
   "directories": {
     "lib": "lib"
   },
