--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -13,7 +13,7 @@
   "author": "Joni Katajamäki <joni.katajamaki@gmail.com>",
   "homepage": "https://github.com/wunderdogsw/proem#readme",
   "license": "MIT",
-  "main": "lib/all.js",
+  "main": "lib/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
