--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -42,8 +42,5 @@
     "@proem/some": "^0.0.13",
     "@proem/dict": "^0.0.13"
   },
-  "gitHead": "1724f654330c1c1a8631069d2884bc250d795233",
-  "devDependencies": {
-    "typescript": "^3.1.4"
-  }
+  "gitHead": "1724f654330c1c1a8631069d2884bc250d795233"
 }
