--- a/packages/some/package.json
+++ b/packages/some/package.json
@@ -39,8 +39,5 @@
   "bugs": {
     "url": "https://github.com/wunderdogsw/proem/issues"
   },
-  "gitHead": "1724f654330c1c1a8631069d2884bc250d795233",
-  "devDependencies": {
-    "typescript": "^3.1.4"
-  }
+  "gitHead": "1724f654330c1c1a8631069d2884bc250d795233"
 }
