--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,8 @@ node_js:
 - '8'
 - '6'
 
-cache:
-  directories:
-  - "$HOME/.npm"
+cache: yarn
 
 before_script:
-  - lerna bootstrap
-  - lerna run prepublishOnly
-  - npm run build
+  - yarn install
+  - yarn build
