--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "workspaces": [
     "packages/*"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "scripts": {
     "build:esm": "tsc -b ./tsconfig.esm.json",
     "build:commonjs": "tsc -b .",
@@ -15,9 +20,11 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.6",
+    "husky": "^1.3.1",
     "jest": "^24.1.0",
     "lerna": "^3.13.0",
     "prettier": "^1.16.4",
+    "pretty-quick": "^1.10.0",
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.3"
   },
