--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proem/all",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "Meta package that includes all proem packages",
   "keywords": [
     "proem",
@@ -36,11 +36,11 @@
     "url": "https://github.com/wunderdogsw/proem/issues"
   },
   "dependencies": {
-    "@proem/array": "^0.0.13",
-    "@proem/function": "^0.0.13",
-    "@proem/pipe": "^0.0.13",
-    "@proem/some": "^0.0.13",
-    "@proem/dict": "^0.0.13"
+    "@proem/array": "^0.0.14",
+    "@proem/dict": "^0.0.14",
+    "@proem/function": "^0.0.14",
+    "@proem/pipe": "^0.0.14",
+    "@proem/some": "^0.0.14"
   },
   "gitHead": "1724f654330c1c1a8631069d2884bc250d795233"
 }
