--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:commonjs": "tsc -b .",
     "build": "yarn build:esm && yarn build:commonjs",
     "build:watch": "tsc -b . -w",
-    "publish": "yarn build && lerna publish",
+    "release": "yarn build && lerna publish",
     "lint": "yarn tslint --project ./tsconfig.lint.json",
     "test": "jest",
     "test:watch": "jest --watch"
