--- a/tsconfig.lint.json
+++ b/tsconfig.lint.json
@@ -1,4 +1,5 @@
 {
   "extends": "./tsconfig.settings.json",
-  "include": ["./packages/*/src/**/*.ts"]
+  "include": ["./packages/*/src/**/*.ts"],
+  "exclude": []
 }
