--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -5,6 +5,7 @@
     { "path": "packages/array/tsconfig.esm.json" },
     { "path": "packages/dict/tsconfig.esm.json" },
     { "path": "packages/pipe/tsconfig.esm.json" },
-    { "path": "packages/some/tsconfig.esm.json" }
+    { "path": "packages/some/tsconfig.esm.json" },
+    { "path": "packages/variant/tsconfig.esm.json" }
   ]
 }
