Fix initial build by committing types

--- a/packages/dict/package.json
+++ b/packages/dict/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "main": "lib/index.js",
   "module": "esm/index.js",
-  "types": "lib/index.d.ts",
+  "types": "types/index.d.ts",
   "directories": {
     "lib": "lib"
   },
