--- a/packages/array/tsconfig.json
+++ b/packages/array/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "../../tsconfig.settings.json",
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": "src"
-  }
+    "rootDir": "src",
+    "declarationDir": "./types"
+  },
+  "files": ["src/index.ts"]
 }
