--- a/packages/dict/tsconfig.json
+++ b/packages/dict/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../../tsconfig.settings.json",
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "declarationDir": "./types"
   },
+  "files": ["src/index.ts"],
   "references": [{ "path": "../function/tsconfig.json" }]
 }
