--- a/packages/variant/package.json
+++ b/packages/variant/package.json
@@ -14,6 +14,8 @@
   "homepage": "https://github.com/wunderdogsw/proem",
   "license": "MIT",
   "main": "lib/index.js",
+  "module": "esm/index.js",
+  "types": "types/index.d.ts",
   "directories": {
     "lib": "lib"
   },
