--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -3,3 +3,7 @@ update_configs:
   - package_manager: "javascript"
     directory: "/"
     update_schedule: "live"
+
+    automerged_updates:
+      - match:
+          update_type: "patch"
