Add variant as a dep to all

--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -40,7 +40,8 @@
     "@proem/dict": "^0.0.17",
     "@proem/function": "^0.0.17",
     "@proem/pipe": "^0.0.17",
-    "@proem/some": "^0.0.17"
+    "@proem/some": "^0.0.17",
+    "@proem/variant": "^0.0.17"
   },
   "gitHead": "1724f654330c1c1a8631069d2884bc250d795233"
 }
