--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -41,7 +41,8 @@
     "@proem/function": "^0.0.19",
     "@proem/pipe": "^0.0.19",
     "@proem/some": "^0.0.19",
-    "@proem/variant": "^0.0.19"
+    "@proem/variant": "^0.0.19",
+    "@proem/union": "^0.0.19"
   },
   "gitHead": "1724f654330c1c1a8631069d2884bc250d795233"
 }
