--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:watch": "tsc -b . -w",
     "release": "yarn build && lerna publish",
     "lint": "yarn tslint --project ./tsconfig.lint.json",
+    "clean": "rimraf ./packages/*/lib/**/*.js ./packages/*/lib/**/*.test.* ./packages/*/lib/**/*.js.map",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -26,7 +27,10 @@
     "lerna": "^3.13.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.6.0",
     "ts-jest": "^24.0.0",
+    "ts-node": "^8.0.3",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.3.3"
