--- a/packages/all/tsconfig.json
+++ b/packages/all/tsconfig.json
@@ -1,9 +1,8 @@
 {
-  "extends": "../../tsconfig.settings.json",
+  "extends": "../../tsconfig.shared.json",
   "compilerOptions": {
-    "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "outDir": "lib"
   },
-  "exclude": ["lib"],
-  "files": ["src/index.ts"]
+  "include": ["src/**/*.ts"]
 }
