--- a/packages/dict/package.json
+++ b/packages/dict/package.json
@@ -12,9 +12,9 @@
   "author": "Timo Sand <timo.sand@iki.fi>",
   "homepage": "https://github.com/wunderdogsw/proem",
   "license": "MIT",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
-  "types": "types/index.d.ts",
+  "main": "lib/index.cjs.js",
+  "module": "lib/index.js",
+  "types": "lib/index.d.ts",
   "directories": {
     "lib": "lib"
   },
@@ -22,14 +22,9 @@
     "access": "public"
   },
   "files": [
-    "lib",
-    "esm"
+    "lib"
   ],
   "scripts": {
-    "build:commonjs": "tsc -b .",
-    "build:esm": "tsc -b ./tsconfig.esm.json",
-    "build": "yarn build:esm && yarn build:commonjs",
-    "prepublishOnly": "yarn build:commonjs && yarn build:esm",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "gitHead": "1724f654330c1c1a8631069d2884bc250d795233",
