--- a/packages/dict/tsconfig.json
+++ b/packages/dict/tsconfig.json
@@ -1,10 +1,13 @@
 {
-  "extends": "../../tsconfig.settings.json",
+  "extends": "../../tsconfig.shared.json",
   "compilerOptions": {
-    "outDir": "lib",
     "rootDir": "src",
-    "declarationDir": "./types"
+    "outDir": "lib"
   },
-  "files": ["src/index.ts"],
-  "references": [{ "path": "../function/tsconfig.json" }]
+  "include": ["src/**/*.ts"],
+  "references": [
+    {
+      "path": "../function"
+    }
+  ]
 }
