--- a/packages/function/tsconfig.json
+++ b/packages/function/tsconfig.json
@@ -1,9 +1,8 @@
 {
-  "extends": "../../tsconfig.settings.json",
+  "extends": "../../tsconfig.shared.json",
   "compilerOptions": {
-    "outDir": "lib",
     "rootDir": "src",
-    "declarationDir": "./types"
+    "outDir": "lib"
   },
-  "files": ["src/index.ts"]
+  "include": ["src/**/*.ts"]
 }
