--- a/packages/pipe/package.json
+++ b/packages/pipe/package.json
@@ -14,16 +14,14 @@
   "author": "Joni Katajamäki <joni.katajamaki@wunderdog.fi>",
   "homepage": "https://github.com/wunderdogsw/proem",
   "license": "MIT",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
-  "types": "types/index.d.ts",
+  "main": "lib/index.cjs.js",
+  "module": "lib/index.js",
+  "types": "lib/index.d.ts",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
-    "lib",
-    "esm"
+    "lib"
   ],
   "publishConfig": {
     "access": "public"
@@ -33,9 +31,6 @@
     "url": "git+https://github.com/wunderdogsw/proem.git"
   },
   "scripts": {
-    "build:commonjs": "tsc -b .",
-    "build:esm": "tsc -b ./tsconfig.esm.json",
-    "prepublishOnly": "yarn build:commonjs && yarn build:esm",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
