--- a/tsconfig.lint.json
+++ b/tsconfig.lint.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.settings.json",
+  "extends": "./tsconfig.shared.json",
   "include": ["./packages/*/src/**/*.ts"],
   "exclude": []
 }
