--- a/tsconfig.shared.json
+++ b/tsconfig.shared.json
@@ -1,16 +1,16 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "esnext",
     "declaration": true,
     "declarationMap": true,
+    "removeComments": true,
     "sourceMap": true,
     "strict": true,
     "composite": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "baseUrl": "packages",
     "lib": ["esnext"]
   },
-  "exclude": ["**/*.test.ts", "**/esm/*", "**/lib/*"]
+  "exclude": ["**/esm/*", "**/lib/*"]
 }
