--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     { "path": "packages/dict" },
     { "path": "packages/pipe" },
     { "path": "packages/some" },
-    { "path": "packages/variant" }
+    { "path": "packages/variant" },
+    { "path": "packages/all" }
   ],
   "exclude": ["**/*"]
 }
