--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pretty-quick": "^1.10.0",
     "rimraf": "^2.6.3",
     "rollup": "^1.6.0",
+    "rollup-plugin-auto-external": "^2.0.0",
     "ts-jest": "^24.0.0",
     "ts-node": "^8.0.3",
     "tslint": "^5.12.1",
