--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proem/all",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "description": "Meta package that includes all proem packages",
   "keywords": [
     "proem",
@@ -32,13 +32,13 @@
     "url": "https://github.com/wunderdogsw/proem/issues"
   },
   "dependencies": {
-    "@proem/array": "^0.0.19",
-    "@proem/dict": "^0.0.19",
-    "@proem/function": "^0.0.19",
-    "@proem/pipe": "^0.0.19",
-    "@proem/some": "^0.0.19",
-    "@proem/variant": "^0.0.19",
-    "@proem/union": "^0.0.19"
+    "@proem/array": "^0.0.20",
+    "@proem/dict": "^0.0.20",
+    "@proem/function": "^0.0.20",
+    "@proem/pipe": "^0.0.20",
+    "@proem/some": "^0.0.20",
+    "@proem/union": "^0.0.20",
+    "@proem/variant": "^0.0.20"
   },
   "gitHead": "1724f654330c1c1a8631069d2884bc250d795233"
 }
