Lerna update git refs

--- a/packages/function/package.json
+++ b/packages/function/package.json
@@ -31,5 +31,6 @@
   },
   "bugs": {
     "url": "https://github.com/wunderdogsw/proem/issues"
-  }
+  },
+  "gitHead": "49641f4eda8b5eb9e9d121b91e074a9afeb3a348"
 }
