--- a/packages/union/package.json
+++ b/packages/union/package.json
@@ -18,6 +18,7 @@
     "lib": "lib"
   },
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.yarnpkg.com"
   },
   "repository": {
@@ -29,5 +30,6 @@
   },
   "bugs": {
     "url": "https://github.com/wunderdogsw/proem/issues"
-  }
+  },
+  "gitHead": "49641f4eda8b5eb9e9d121b91e074a9afeb3a348"
 }
