--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "ts-node": "^8.0.3",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.3.3"
+    "typescript": "^3.4.0-rc"
   },
   "jest": {
     "moduleFileExtensions": [
