--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ packages/*/node_modules
 
 # Type definitions are committed, required by TS project references
 packages/*/lib/**/*.test.*
+packages/*/lib/**/*.bench.*
 packages/*/lib/**/*.js
 packages/*/lib/**/*.js.map
 packages/*/src/**/*.js
