--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "release": "yarn build && lerna publish",
     "lint": "yarn tslint --project ./tsconfig.lint.json",
     "clean": "rimraf \"./packages/*/lib/**/*.js\" \"./packages/*/lib/**/*.test.*\" \"./packages/*/lib/**/*.js.map\"",
+    "bench": "node bench.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -26,6 +27,7 @@
     "@types/jest": "^24.0.6",
     "benchmark": "^2.1.4",
     "concurrently": "^4.1.0",
+    "glob": "^7.1.3",
     "husky": "^1.3.1",
     "jest": "^24.1.0",
     "lerna": "^3.13.0",
