--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
     "release": "yarn build && lerna publish",
     "lint": "yarn tslint --project ./tsconfig.lint.json",
     "clean": "rimraf \"./packages/*/lib/**/*.js\" \"./packages/*/lib/**/*.test.*\" \"./packages/*/lib/**/*.js.map\"",
+    "bench": "node bench.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "devDependencies": {
+    "@types/benchmark": "^1.0.31",
     "@types/jest": "^24.0.6",
+    "benchmark": "^2.1.4",
     "concurrently": "^4.1.0",
+    "glob": "^7.1.3",
     "husky": "^1.3.1",
     "jest": "^24.1.0",
     "lerna": "^3.13.0",
+    "microtime": "^3.0.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "rimraf": "^2.6.3",
