--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,5 @@
 {
-  "recommendations": [
-    "ms-vscode.vscode-typescript-tslint-plugin",
-    "esbenp.prettier-vscode"
-  ],
+  "recommendations": ["esbenp.prettier-vscode"],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
 }
