--- a/package.json
+++ b/package.json
@@ -6,53 +6,27 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged --pattern \"./packages/*/src/**/*.ts\" && yarn lint"
+      "pre-commit": "pretty-quick --staged --pattern \"./src/**/*.ts\" --pattern \"./test/**/*.ts\""
     }
   },
   "scripts": {
-    "build:esm": "rollup -c",
-    "build:commonjs": "tsc -b .",
-    "build": "yarn build:commonjs && yarn run build:esm",
-    "rollup:watch": "rollup -c --watch --silent",
-    "build:watch": "concurrently \"yarn tsc -b -w\" \"yarn run --silent rollup:watch\"",
-    "release": "yarn build && lerna publish",
-    "lint": "yarn tslint --project ./tsconfig.lint.json",
-    "clean": "rimraf \"./packages/*/lib/**/*.js\" \"./packages/*/lib/**/*.test.*\" \"./packages/*/lib/**/*.js.map\"",
-    "bench": "node bench.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "build": "tsc -p tsconfig.build.json",
+    "clean:package": "node scripts/clean.js"
   },
   "devDependencies": {
     "@types/benchmark": "^1.0.31",
-    "@types/jest": "^24.0.6",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.13.4",
     "benchmark": "^2.1.4",
-    "concurrently": "^4.1.0",
-    "glob": "^7.1.3",
     "husky": "^1.3.1",
-    "jest": "^24.1.0",
-    "lerna": "^3.13.0",
+    "jest": "^24.7.1",
     "microtime": "^3.0.0",
-    "prettier": "^1.16.4",
+    "prettier": "^1.17.0",
     "pretty-quick": "^1.10.0",
     "rimraf": "^2.6.3",
-    "rollup": "^1.6.0",
-    "rollup-plugin-auto-external": "^2.0.0",
-    "ts-jest": "^24.0.0",
-    "ts-node": "^8.0.3",
-    "tslint": "^5.12.1",
-    "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.4.0-rc"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "testMatch": [
-      "<rootDir>/packages/**/*.test.ts"
-    ]
+    "ts-jest": "^24.0.2",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.3"
   }
 }
