--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     }
   },
   "scripts": {
+    "lint": "eslint **/*.ts",
     "test": "jest",
     "build": "tsc -p tsconfig.build.json",
     "clean:package": "node scripts/clean.js"
@@ -15,7 +16,14 @@
     "@types/benchmark": "^1.0.31",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.4",
+    "@typescript-eslint/eslint-plugin": "^1.6.0",
+    "@typescript-eslint/parser": "^1.6.0",
     "benchmark": "^2.1.4",
+    "eslint": "5.16.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "2.17.2",
+    "eslint-plugin-jest": "^22.4.1",
     "husky": "^1.3.1",
     "jest": "^24.7.1",
     "microtime": "^3.0.0",
