--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "lint": "eslint **/*.ts",
     "test": "jest",
+    "test:watch": "jest --watch",
     "build": "tsc -p tsconfig.build.json",
     "clean:package": "node scripts/clean.js"
   },
