--- a/.eslintrc
+++ b/.eslintrc
@@ -49,6 +49,13 @@
       "rules": {
         "@typescript-eslint/explicit-function-return-type": 0
       }
+    },
+
+    {
+      "files": ["scripts/**.js"],
+      "rules": {
+        "@typescript-eslint/no-var-requires": 0
+      }
     }
   ]
 }
