--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,71 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
+executors:
+  node-executor:
+    docker:
+      - image: circleci/node:10.13
+    working_directory: /repo
+
 version: 2
 jobs:
-  build:
-    docker:
-      # specify the version you desire here
-      - image: circleci/node:10.13
-
-    working_directory: ~/repo
-
+  install:
+    executor: node-executor
     steps:
       - checkout
-
-      # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-{{ checksum "yarn.lock" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-
-      - run: yarn install
-
+      - run: yarn install --frozen-lockfile
       - save_cache:
+          key: v1-dependencies-{{ checksum "yarn.lock" }}
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+      - persist_to_workspace:
+          root: .
+          paths: node_modules
+  build:
+    executor: node-executor
+    steps:
+      - checkout
+      - attach_workspace:
+        at: ~/repo
+      - run: yarn build
+      - persist_to_workspace:
+          root: .
+          paths:
+            - package
+  test:
+    executor: node-executor
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/repo
+      - run: yarn lint && yarn test
+  release:
+    executor: node-executor
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/repo
+      - run: yarn release
 
-      # run tests!
-      - run: yarn build && yarn test
+workflows:
+  version: 2
+  build-test-deploy:
+    jobs:
+      - install
+      - build:
+        requires:
+          - install
+      - test:
+        requires:
+          - install
+      - deploy:
+          filters:
+            branches:
+              only:
+                - master
+                - continuous-deployment # TODO: remove
+          requires:
+            - test
+            - build
