--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ workflows:
       - test:
           requires:
             - install
-      - deploy:
+      - release:
           filters:
             branches:
               only:
