ci(circle): more logging

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,8 +32,9 @@ jobs:
       - checkout
       - restore_yarn
       - run: yarn build
+      - run: ls -la package
       - persist_to_workspace:
-          root: .
+          root: /tmp/repo
           paths:
             - package
   test:
