--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.4",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
     "benchmark": "^2.1.4",
     "commitizen": "^3.0.7",
@@ -50,6 +51,7 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "2.17.2",
     "eslint-plugin-jest": "^22.4.1",
+    "eslint-plugin-jsdoc": "^4.8.3",
     "husky": "^1.3.1",
     "jest": "^24.7.1",
     "microtime": "^3.0.0",
@@ -58,6 +60,7 @@
     "rimraf": "^2.6.3",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
     "typescript": "^3.4.3"
   }
 }
