build(lint): require jsdocs on exported interfaces

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,7 +27,8 @@
             true,
             {
               "functions": { "visibilities": ["exported"] },
-              "types": { "visibilities": ["exported"] }
+              "types": { "visibilities": ["exported"] },
+              "interfaces": { "visibilities": ["exported"] }
             }
           ]
         }
