build(test): remove test path tilde alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "outDir": "package",
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*", "test/*"]
+      "~/*": ["src/*"]
     }
   },
   "include": ["src/**/*.ts", "test/**/*.ts"],
