build(script): allow use of require in all js files

--- a/.eslintrc
+++ b/.eslintrc
@@ -76,7 +76,7 @@
       }
     },
     {
-      "files": ["scripts/**.js"],
+      "files": ["**.js"],
       "rules": {
         "@typescript-eslint/no-var-requires": 0
       }
