--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,8 @@
 {
   "extends": [
-    "config:base"
+    "config:js-lib",
+    "schedule:weekly",
+    ":rebaseStalePrs",
+    ":maintainLockFilesWeekly",
   ]
 }
