--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,6 @@
     "config:js-lib",
     "schedule:weekly",
     ":rebaseStalePrs",
-    ":maintainLockFilesWeekly",
+    ":maintainLockFilesWeekly"
   ]
 }
