Changes to group PR's for non-major updates

--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,7 @@
   "extends": [
     "config:js-lib",
     ":rebaseStalePrs",
-    "schedule:weekly"
+    "schedule:weekly",
+    "group:allNonMajor"
   ]
 }
