--- a/renovate.json
+++ b/renovate.json
@@ -5,5 +5,6 @@
     "schedule:weekly",
     "group:allNonMajor"
   ],
-  "lockFileMaintenance": { "enabled": false }
+  "lockFileMaintenance": { "enabled": false },
+  "updateLockFiles": true
 }
