--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "clean": "node scripts/clean.js",
     "release": "cd package && npx semantic-release"
   },
+  "resolutions": {
+    "micromatch": "4.0.1"
+  },
   "devDependencies": {
     "@commitlint/config-conventional": "8.0.0",
     "@types/benchmark": "1.0.31",
