--- a/package.json
+++ b/package.json
@@ -65,5 +65,8 @@
     "ts-node": "8.5.2",
     "tslint": "5.20.1",
     "typescript": "3.7.2"
+  },
+  "dependencies": {
+    "ts-toolbelt": "^4.12.0"
   }
 }
