--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,7 @@
     "import/no-unresolved": 0,
     "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
     "import/export": 0,
+    "import/extensions": 0,
     "@typescript-eslint/member-delimiter-style": [
       "error",
       {
